-m fixed bug for safari

--- a/app/views/terminal/_terminal.rhtml
+++ b/app/views/terminal/_terminal.rhtml
@@ -3,7 +3,7 @@
   <div id="panel_<%=@id%>" class="tmpl">
     <div id="title_<%=@id%>" class="tmtl">
       <%= image_tag('tbb_l.png', :class => 'tmtlleft') %>
-      <label class="tmtlmsg">ruby <%=@version%></label>
+      <label class="tmtlmsg"></label>
       <label id="tmtlname_<%=@id%>" class="tmtlmsg"></label>
       <%= image_tag('tbb_r.png', :class => 'tmtlright') %>
       <%= image_tag('close_terminal.ico', :class => 'tmtlicon', :alt => 'close', :onclick => "$('term_#{@id}').remove();") %>
