--- a/app/views/terminal/listfiles.js.erb
+++ b/app/views/terminal/listfiles.js.erb
@@ -1,3 +1,4 @@
 <% s = escape_javascript(render(:partial => 'filelist')) %>
 <% select_id = "select_#{@id}" %>
 $('<%=select_id%>').update('<%=s%>');
+$('<%=select_id%>').focus();
