--- a/app/views/welcome/index.rhtml
+++ b/app/views/welcome/index.rhtml
@@ -3,10 +3,10 @@
     #TODO add mouseover mouseout action
    %>
   <div class="si1">
-    <%= link_to image_tag('1.9.png', :alt => '1.9', :title => 'ruby 1.9 interpreter'), {:controller => 'terminal', :action => 'create', :version => '1.9'}, :remote => true %>
+    <%= link_to image_tag('ruby-blue.jpg', :size=> '50x50', :alt => '1.9', :title => 'ruby 1.9 interpreter'), {:controller => 'terminal', :action => 'create', :version => '1.9'}, :remote => true %>
   </div>
   <div class="si1">
-    <%= link_to image_tag('1.8.png', :alt => '1.8', :title => 'ruby 1.8 interpreter'),  {:controller => 'terminal', :action => 'create', :version => '1.8'}, :remote => true %>
+    <%= link_to image_tag('ruby-grean.jpg', :size => '50x50',:alt => '1.8', :title => 'ruby 1.8 interpreter'),  {:controller => 'terminal', :action => 'create', :version => '1.8'}, :remote => true %>
 
   </div>
   <div>
