--- a/app/views/terminal/_terminal.rhtml
+++ b/app/views/terminal/_terminal.rhtml
@@ -1,12 +1,12 @@
 <% eid = "editor_#{@id}" %>
 <div id="term_<%=@id%>" class="tm" style="display:block;">
-  <div id="panel_<%=@id%>" class="tmpl">
-    <div id="title_<%=@id%>" class="tmtl">
-      <%= image_tag('tbb_l.png', :class => 'tmtlleft') %>
-      <label class="tmtlmsg"></label>
-      <label id="tmtlname_<%=@id%>" class="tmtlmsg"></label>
-      <%= image_tag('tbb_r.png', :class => 'tmtlright') %>
-      <%= image_tag('close_terminal.ico', :class => 'tmtlicon', :alt => 'close', :onclick => "$('term_#{@id}').remove();") %>
+  <div id="panel_<%=@id%>" class="pl">
+    <div id="title_<%=@id%>" class="tl">
+      <%= image_tag('tbb_l.png', :class => 'tlleft') %>
+      <label class="tlmsg"></label>
+      <label id="tlname_<%=@id%>" class="tlmsg"></label>
+      <%= image_tag('tbb_r.png', :class => 'tlright') %>
+      <%= image_tag('close2.png', :class => 'tlicon', :alt => 'close', :onclick => "$('term_#{@id}').remove();", :mouseover => image_path("close1.png"))%>
     </div>
       <%= form_for :script, :url => {:controller => "terminal", :action => "listfiles", :id => @id}, :html => {:id => "listfiles_#{@id}"}, :remote => true do |f| %>
       <% end %>
