fixed bugs of shadow in editor

--- a/app/views/terminal/create.js.erb
+++ b/app/views/terminal/create.js.erb
@@ -12,7 +12,7 @@ editAreaLoader.init({
   id: "<%=eid%>",
   syntax: "ruby",
   start_highlight: true,
-  language: "ja",
+  language: "en",
   allow_toggle: false,
  // toolbar: "new_document, load, save, |, fullscreen, word_wrap, |, select_font",
   toolbar: "load, save, |, fullscreen, word_wrap, |, search, go_to_line, undo, redo, |, version_selection, exec, share",
