--- a/app/views/terminal/save.js.erb
+++ b/app/views/terminal/save.js.erb
@@ -1,5 +1,5 @@
 // update name in title
 <% basename = @fullname[0..-18]%>
-$("tmtlname_<%=@id%>").update("<%=basename%>");
+$("tlname_<%=@id%>").update("<%=basename%>");
 $("fullname_<%=@id%>").writeAttribute('value', "<%=@fullname%>");
 $("basename_<%=@id%>").writeAttribute('value', "<%=basename%>");
