--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= stylesheet_link_tag 'vm' %>
   <%= javascript_include_tag :defaults %>
   <%= javascript_include_tag 'vm' %>
+  <%= javascript_include_tag 'shortcut' %>
   <%= javascript_include_tag 'edit_area/edit_area_full.js' %>
   <%= csrf_meta_tag %>
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
