--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>wrb ruby学習/オンラインインタプリタ</title>
+  <title>wrb - ruby study - online interpeter</title>
   <link rel="shortcut icon" href="favicon.ico" />
   <%= stylesheet_link_tag 'vm' %>
   <%= javascript_include_tag :defaults %>
