--- a/app/views/welcome/index.rhtml
+++ b/app/views/welcome/index.rhtml
@@ -17,6 +17,7 @@
   </div>
 <% else %>
   <h2>Sorry your browser is not supported now, please see help for more information.</h2>
+  <h2>Firefox,Safari,Chrome,Maxthon are supported.</h2>
 <% end %>
   <div class="dti">
     <a href="<%=url_for(:controller => 'welcome', :action => 'help')%>" data-remote="true">
