--- a/app/views/welcome/_helpimp.rhtml
+++ b/app/views/welcome/_helpimp.rhtml
@@ -5,23 +5,13 @@
   </head>
   <body onclick="this.parent.setFocusToHelp();">
     <h3>welcome to wrb!</h3>
-<<<<<<< HEAD
     <p>&nbsp;&nbsp;You can edit, execute and share your ruby code on this site. wrb is a good partner for you if you are studying ruby or working with ruby. The ruby syntax will be parsed and highlighted on the edit mode. You can run your code under ruby 1.8.7 / 1.9.2 / 1.9.3 by choosing the ruby version on the wrb terminal. More than one terminals can be openned, You can save the code to the server in a terminal, and load it from the other terminals. You can also share code with your friends on twitter and other microblogging.</p>
     <h4>- about wrb -</h4>
     <dl>
       <dt>version:</dt>
-      <dd>1.0.1</dd>
+      <dd>1.1.0</dd>
       <dt>released at:</dt>
-      <dd>2012/02/22</dd>
-=======
-    <p>&nbsp;&nbsp;You can edit, execute and share your ruby code on this site. wrb is a good partner for you if you are studying ruby or working with ruby. The ruby syntax will be parsed and highlighted on the edit mode. You can run your code under both ruby 1.8 and ruby 1.9 by choosing the ruby version on the wrb terminal. More than one terminals can be openned, You can save the code to the server in a terminal, and load it from the other terminals. You can also share code with your friends on twitter and other microblogging.</p>
-    <h4>- about wrb -</h4>
-    <dl>
-      <dt>version:</dt>
-      <dd>1.0.0</dd>
-      <dt>released at:</dt>
-      <dd>2011/08/27</dd>
->>>>>>> 7ed92960be6667c2d27fbc03efa9ba921b2ac5df
+      <dd>2012/06/06</dd>
       <dt>supported system:</dt>
       <dd>PC: Windows Linux Macintosh(Mac)</dd>
       <dd>SmartPhone: Android</dd>
@@ -39,11 +29,7 @@
       <dt>load:</dt>
       <dd>Saved codes can be loaded until your session is expired.</dd>
       <dt>execute:</dt>
-<<<<<<< HEAD
       <dd>The code can by executed under ruby 1.8.7 / 1.9.2 / 1.9.3 currently.</dd>
-=======
-      <dd>The code can by executed under ruby 1.8 or 1.9 currently.</dd>
->>>>>>> 7ed92960be6667c2d27fbc03efa9ba921b2ac5df
       <dt>share:</dt>
       <dd>The code can be shared to your frients on twitter and so on.</dd>
     </dl>
@@ -57,11 +43,10 @@
     </dl>
     <h4>- release notes -</h4>
     <dl>
-<<<<<<< HEAD
+      <dt>2012/06/06</dt>
+      <dd>Version: 1.1.0</dd>
       <dt>2012/02/22</dt>
       <dd>Version: 1.0.1</dd>
-=======
->>>>>>> 7ed92960be6667c2d27fbc03efa9ba921b2ac5df
       <dt>2011/08/27</dt>
       <dd>Version: 1.0.0</dd>
       <dt>2011/08/21</dt>
